cmake_minimum_required(VERSION 3.28)
project(7_CPP_Problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(problem1 problem1.cpp)
add_executable(problem2 problem2.cpp)
add_executable(problem3 problem3.cpp)
add_executable(problem4 problem4.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
add_executable(problem10 problem10.cpp)
add_executable(problem11 problem11.cpp)
add_executable(problem12 problem12.cpp)
add_executable(problem13 problem13.cpp)
add_executable(problem14 problem14.cpp)
add_executable(problem15 problem15.cpp)
add_executable(problem16 problem16.cpp)
add_executable(problem17 problem17.cpp)
add_executable(problem18 problem18.cpp)
add_executable(problem19 problem19.cpp)
add_executable(problem20 problem20.cpp)
add_executable(problem21 problem21.cpp)
add_executable(problem22 problem22.cpp)
add_executable(problem23 problem23.cpp)
add_executable(problem24 problem24.cpp)
add_executable(problem25 problem25.cpp)
add_executable(problem26 problem26.cpp)
add_executable(problem27 problem27.cpp)
add_executable(problem28 problem28.cpp)
add_executable(problem29 problem29.cpp)
add_executable(problem30 problem30.cpp)
add_executable(problem31 problem31.cpp)
add_executable(problem32 problem32.cpp)
add_executable(problem33 problem33.cpp)
add_executable(problem34 problem34.cpp)
add_executable(problem35 problem35.cpp)
add_executable(problem36 problem36.cpp)
add_executable(problem37 problem37.cpp)
add_executable(problem38 problem38.cpp)
add_executable(problem39 problem39.cpp)
add_executable(problem40 problem40.cpp)
